front-end: добавлен вывод всей продукции